--- a/params/Rosbot2R/LcdParams.yaml
+++ b/params/Rosbot2R/LcdParams.yaml
@@ -1,11 +1,12 @@
 %YAML:1.0
 # LoopClosureDetector parameters:
 use_nss: 1
-alpha: 0.5
-min_temporal_matches: 3
-recent_frames_window: 20
-max_db_results: 50
-min_nss_factor: 0.005
+alpha: 0.1
+min_temporal_matches: 6
+recent_frames_window: 300
+dist_local: 1
+max_db_results: 5
+min_nss_factor: 0.05
 min_matches_per_island: 1
 max_intraisland_gap: 3
 max_nrFrames_between_islands: 3
@@ -13,7 +14,7 @@ max_nrFrames_between_queries: 2
 
 refine_pose: 1
 
-lowe_ratio: 0.7
+lowe_ratio: 0.8
 matcher_type: 3
 
 nfeatures: 500
@@ -29,17 +30,16 @@ fast_threshold: 20
 betweenRotationPrecision: 10000 # 1/(0.01*0.01)
 betweenTranslationPrecision: 100 # 1/(0.1*0.1)
 
-odom_rot_threshold: 0.01
-odom_trans_threshold: 0.05
+odom_rot_threshold: 0.001
+odom_trans_threshold: 0.01
 pcm_rot_threshold: -1
 pcm_trans_threshold: -1
-gnc_alpha: 0.7
+gnc_alpha: 0.9
 
 max_lc_cached_before_optimize: 10
 
 #TRACKER PARAMETERS for outlier rejection
 disparity_threshold: 0.5
-
 min_nr_2d2d_inliers: 10
 min_nr_3d3d_inliers: 5
 min_nr_2d3d_inliers: 20
