--- a/params/Rosbot2R/ImuParams.yaml
+++ b/params/Rosbot2R/ImuParams.yaml
@@ -4,7 +4,7 @@
 # 1: ImuFactor
 imu_preintegration_type: 1
 
-# Sensor extrinsics wrt. the body-frame (T_BS = T_i_b)
+# Sensor extrinsics wrt. the body-frame.
 T_BS:
   cols: 4
   rows: 4
@@ -12,26 +12,19 @@ T_BS:
          0.0, 1.0, 0.0, 0.0,
          0.0, 0.0, 1.0, 0.0,
          0.0, 0.0, 0.0, 1.0]
+rate_hz: 10.0
 
-rate_hz: 50.0
-
-# Initial bias uncertainty
+# inertial sensor noise model parameters (static)
 imu_bias_init_sigma: 1e-3
+gyroscope_noise_density: 0.005       # [ rad / s / sqrt(Hz) ]
+gyroscope_random_walk: 4e-06         # [ rad / s^2 / sqrt(Hz) ]
+accelerometer_noise_density: 0.01    # [ m / s^2 / sqrt(Hz) ]
+accelerometer_random_walk: 0.0002    # [ m / s^3 / sqrt(Hz) ]
 
-# Gyroscope noise model
-gyroscope_noise_density: 5.8939678767e-04      # [rad/s/sqrt(Hz)]
-gyroscope_random_walk: 4.11838707348e-06       # [rad/s^2/sqrt(Hz)]
-
-# Accelerometer noise model
-accelerometer_noise_density: 6.8532653237e-03  # [m/s^2/sqrt(Hz)]
-accelerometer_random_walk: 5.70561067977e-04   # [m/s^3/sqrt(Hz)]
-
-# Optional IMU extra parameters
+# Extra parameters
 do_imu_rate_time_alignment: 1
 time_alignment_window_size_s: 10.0
 time_alignment_variance_threshold_scaling: 30.0
 imu_integration_sigma: 1.0e-8
-imu_time_shift: 0.000253908460779
-
-# Gravity in world coordinate frame
-n_gravity: [0.14833079, -9.80500927, -0.09063131]
+imu_time_shift: -0.00017226920871622772
+n_gravity: [0.23868652, -9.80316722, 0.0967685]
