--- a/params/Rosbot2R/LeftCameraParams.yaml
+++ b/params/Rosbot2R/LeftCameraParams.yaml
@@ -3,19 +3,18 @@
 camera_id: left_cam
 
 # Sensor extrinsics wrt. the body-frame.
-# Assuming left camera is at the origin.
 T_BS:
   cols: 4
   rows: 4
-  data: [1.0, 0.0, 0.0, 0.0,
-         0.0, 1.0, 0.0, 0.0,
-         0.0, 0.0, 1.0, 0.0,
-         0.0, 0.0, 0.0, 1.0]
+  data: [ 0.00878408, 0.0731003, 0.99728591, 0.00002741,
+         -0.99982571, 0.01707281, 0.00755503, 0.00020406,
+         -0.0164742, -0.99717845, 0.07323753, -0.00007774,
+          0.0, 0.0, 0.0, 1.0]
 
 # Camera specific definitions.
 rate_hz: 20
 resolution: [640, 480]
 camera_model: pinhole
-intrinsics: [514.7885277473877, 517.5052902771528, 333.749686614527, 247.79869424080977]
-distortion_model: radial-tangential
-distortion_coefficients: [0.029325071502778122, -0.13009798041551843, -5.1333316545792147e-05, -0.0006769615006637193]
+intrinsics: [514.9911481724229, 517.8624327537202, 331.6700468478971, 247.26353114357386]
+distortion_model: rattan
+distortion_coefficients: [0.023211783454444728, -0.10220864108534082, -0.0003104809671972992, -0.002677389457167559]
